--- a/Rec2-main/Rec2-main/index.html
+++ b/Rec2-main/Rec2-main/index.html
@@ -18,20 +18,40 @@
             <label for="menu">
                 <span class="cabecalho__menu-hamburguer container__imagem"></span>
             </label>
+
+            <a href="#"><img class="container__imagem" src="img/logo 1.svg" alt="logotipo da biblioteca start"></a>
+
             <ul class="lista-menu">
                 <li class="lista-menu_titulo">Minecraft</li>
-                <li class="lista-menu_item">Mobs do Mine</li>
-                <li class="lista-menu_item">Dicas</li>
-                <li class="lista-menu_item">Ferramentas</li>
-                <li class="lista-menu_item">Craft</li>
-                <li class="lista-menu_item">Servidores</li>
-                <li class="lista-menu_item">Skins</li>
+                <li class="lista-menu_titulo"><a href='#"></a>Mobs do Mine<li>
+                <li class="lista-menu_titulo"><a href='#"></a>Dicas<li>
+                <li class="lista-menu_titulo"><a href='#"></a>Ferramentas<li>
+                <li class="lista-menu_titulo"><a href='#"></a>Craft<li>
+                <li class="lista-menu_titulo"><a href='#"></a>Servidores<li>
+                <li class="lista-menu_titulo"><a href='#"></a>Skins<li>
             </ul>
-           <a href="#"><img class="container__imagem" src="img/logo 1.svg" alt="logotipo da biblioteca start"></a>
            <h1 class="titulo__cabecalho">Minecraft</h1>
         </div>
+
+
+        <ul class="opcoes">
+            <input type="checkbox" id="opcoes-menu" class="opcoes__botao">
+            <label for="opcoes-menu">
+            <li class="opcoes__item"> Historia </li>
+            </label>
+           <li class="opcoes__link"><a href="#" class="opcoes__link"></a>Server</li>
+        <ul class="lista-menu">
+
+            <li class="lista-menu_titulo"> <a href="#"> Skins </a> </li>
+            <li class="lista-menu_titulo"> <a href="#"> Servidores </a> </li>
+            <li class="lista-menu_titulo"> <a href="#"> Craft </a> </li>
+            <li class="lista-menu_titulo"> <a href="#"> Ferramentas </a> </li>
+            <li class="lista-menu_titulo"> <a href="#"> Dicas </a> </li>
+            <li class="lista-menu_titulo"> <a href="#"> Mobs do Mine </a> </li>
+           
+    
         <div class="container">
-           <a href="#"><img class="container__imagem" src="img/Favoritos.svg" alt="meus Favoritos"></a>
+           <a href="#"><img class="container__imagem container__imagem--transparente" src="img/Favoritos.svg" alt="meus Favoritos"></a>
            <a href="#"><img class="container__imagem" src="img/Emprestimos.svg" alt="meus empréstimos"></a>
            <a href="#"><img class="container__imagem" src="img/Usuario.svg" alt="meu perfil"></a>
         </div>
