--- a/index.html
+++ b/index.html
@@ -5,9 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Handjet:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 
 </head>
@@ -19,19 +16,43 @@
                 <span class="cabecalho__menu-hamburguer container__imagem"></span>
             </label>
             <ul class="lista-menu">
-                <li class="lista-menu_titulo">Minecraft</li>
-                <li class="lista-menu_item">Mobs do Mine</li>
-                <li class="lista-menu_item">Dicas</li>
-                <li class="lista-menu_item">Ferramentas</li>
-                <li class="lista-menu_item">Craft</li>
-                <li class="lista-menu_item">Servidores</li>
-                <li class="lista-menu_item">Skins</li>
+              <li class="Titulo_Li">Times de Futebol</li>
+              <li class="Item_Li">Botafogo</li>
+              <li class="Item_Li">Corinthians</li>
+              <li class="Item_Li">Manchester city</li>
+              <li class="Item_Li">Real Madrid</li>
+              <li class="Item_Li">Gremio</li>
+              <li class="Item_Li">Inter de Milão</li>
+              <li class="Item_Li">Smpaio Correa</li>
+              <li class="Item_Li">Avai F.C</li>
+              <li class="Item_Li">Athletico Paranaense</li>
             </ul>
+
            <a href="#"><img class="container__imagem" src="img/logo 1.svg" alt="logotipo da biblioteca start"></a>
-           <h1 class="titulo__cabecalho">Minecraft</h1>
+           <h1 class="titulo_W">Colégio Wilson Joffre</h1>
         </div>
+        <ul class="opcoes">
+            <input type="checkbox" id="opcoes-menu" class="opcoes-bot">
+            <label for="opcoes-menu">
+                <li class="opcoes-li"><a href="" class="opcoes-a"></a>Campeonatos</li>
+            </label>
+            <ul class="lista-menu">
+                <li class="Item_Li">Botafogo</li>
+                <li class="Item_Li">Corinthians</li>
+                <li class="Item_Li">Manchester city</li>
+                <li class="Item_Li">Real Madrid</li>
+                <li class="Item_Li">Gremio</li>
+                <li class="Item_Li">Inter de Milão</li>
+                <li class="Item_Li">Smpaio Correa</li>
+                <li class="Item_Li">Avai F.C</li>
+                <li class="Item_Li">Athletico Paranaense</li>
+            </ul>
+            <li class="opcoes-li"><a href="" class="opcoes-a"></a>Escalações</li>
+            <li class="opcoes-li"><a href="" class="opcoes-a"></a>Classificação</li>
+        </ul>
         <div class="container">
-           <a href="#"><img class="container__imagem" src="img/Favoritos.svg" alt="meus Favoritos"></a>
+
+           <a href="#"><img class="container__imagem container__imagem--transparente" src="img/Favoritos.svg" alt="meus Favoritos"></a>
            <a href="#"><img class="container__imagem" src="img/Emprestimos.svg" alt="meus empréstimos"></a>
            <a href="#"><img class="container__imagem" src="img/Usuario.svg" alt="meu perfil"></a>
         </div>
@@ -41,49 +62,49 @@
             <span>
             </span>
             <div class="div-imagem">
-                <img class="Imagem" src="img/codigo.png" alt="">
-                <h1 class="titulo">Bloco</h1>
+                <img class="Imagem" src="img/pngwing.com.png" alt="">
+                <h1 class="titulo">Botafogo</h1>
             </div>
             <div class="div-imagem">
-                <img class="Imagem" src="img/java.png" alt="">
-                <h1 class="titulo">Picareta</h1>
+                <img class="Imagem" src="img/pngwing.com (1).png" alt="">
+                <h1 class="titulo">Corinthians</h1>
             </div>
             <div class="div-imagem">
-                <img class="Imagem" src="img/sos.png" alt="">
-                <h1 class="titulo">Mobs</h1>
-            </div>
-            <span>
-            </span>
-            <span>
-            </span>
-            <div class="div-imagem">
-                <img class="Imagem" src="img/mao.png" alt="">
-                <h1 class="titulo">Minecraft</h1>
-            </div>
-    
-            <div class="div-imagem">
-                <img class="Imagem" src="img/mapa.png" alt="">
-                <h1 class="titulo">Personagens</h1>
-            </div>
-            <div class="div-imagem">
-                <img class="Imagem" src="img/relogio.png" alt="">
-                <h1 class="titulo">Creeper</h1>
+                <img class="Imagem" src="img/pngwing.com (2).png" alt="">
+                <h1 class="titulo">Manchester City</h1>
             </div>
             <span>
             </span>
             <span>
             </span>
             <div class="div-imagem">
-                <img class="Imagem" src="img/computador.png" alt="">
-                <h1 class="titulo">Logo</h1>
+                <img class="Imagem" src="img/pngwing.com (3).png" alt="">
+                <h1 class="titulo">Real Madrid</h1>
+            </div>
+
+            <div class="div-imagem">
+                <img class="Imagem" src="img/pngwing.com (4).png" alt="">
+                <h1 class="titulo">Gremio</h1>
             </div>
             <div class="div-imagem">
-                <img class="Imagem" src="img/css.png" alt="">
-                <h1 class="titulo">Zombie</h1>
+                <img class="Imagem" src="img/pngwing.com (5).png" alt="">
+                <h1 class="titulo">Inter de Milão</h1>
+            </div>
+            <span>
+            </span>
+            <span>
+            </span>
+            <div class="div-imagem">
+                <img class="Imagem" src="img/pngwing.com (6).png" alt="">
+                <h1 class="titulo">Sampaio Correa</h1>
             </div>
             <div class="div-imagem">
-                <img class="Imagem" src="img/html.png" alt="">
-                <h1 class="titulo">TNT</h1>
+                <img class="Imagem" src="img/pngwing.com (7).png" alt="">
+                <h1 class="titulo">Avai</h1>
+            </div>
+            <div class="div-imagem">
+                <img class="Imagem" src="img/pngwing.com (8).png" alt="">
+                <h1 class="titulo">Athletico Paranaense</h1>
             </div>
         </div>
 
