--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
                 <span class="cabecalho__menu-hamburguer container__imagem"></span>
             </label>
             <ul class="lista-menu">
-              <li class="Titulo_Li">Times de Futebol</li>
-              <li class="Item_Li">Botafogo</li>
-              <li class="Item_Li">Corinthians</li>
-              <li class="Item_Li">Manchester city</li>
-              <li class="Item_Li">Real Madrid</li>
-              <li class="Item_Li">Gremio</li>
-              <li class="Item_Li">Inter de Milão</li>
-              <li class="Item_Li">Smpaio Correa</li>
-              <li class="Item_Li">Avai F.C</li>
-              <li class="Item_Li">Athletico Paranaense</li>
+              <li class="Titulo_Li">Desenhos</li>
+              <li class="Item_Li">Ben10</li>
+              <li class="Item_Li">Winx</li>
+              <li class="Item_Li">Wallace e Gromitt</li>
+              <li class="Item_Li">Super Choque</li>
+              <li class="Item_Li">Jovens Titas</li>
+              <li class="Item_Li">Apenas um Show</li>
+              <li class="Item_Li">Dragon Ball</li>
+              <li class="Item_Li">HeMan</li>
+              <li class="Item_Li">Scoobydoo</li>
             </ul>
 
            <a href="#"><img class="container__imagem" src="img/logo 1.svg" alt="logotipo da biblioteca start"></a>
@@ -34,21 +34,22 @@
         <ul class="opcoes">
             <input type="checkbox" id="opcoes-menu" class="opcoes-bot">
             <label for="opcoes-menu">
-                <li class="opcoes-li"><a href="" class="opcoes-a"></a>Campeonatos</li>
+                <li class="opcoes-li"><a href="" class="opcoes-a"></a>Melhores cenas</li>
             </label>
             <ul class="lista-menu">
-                <li class="Item_Li">Botafogo</li>
-                <li class="Item_Li">Corinthians</li>
-                <li class="Item_Li">Manchester city</li>
-                <li class="Item_Li">Real Madrid</li>
-                <li class="Item_Li">Gremio</li>
-                <li class="Item_Li">Inter de Milão</li>
-                <li class="Item_Li">Smpaio Correa</li>
-                <li class="Item_Li">Avai F.C</li>
-                <li class="Item_Li">Athletico Paranaense</li>
+                <li class="Titulo_Li">Desenhos</li>
+                <li class="Item_Li">Ben10</li>
+                <li class="Item_Li">Winx</li>
+                <li class="Item_Li">Wallace e Gromitt</li>
+                <li class="Item_Li">Super Choque</li>
+                <li class="Item_Li">Jovens Titas</li>
+                <li class="Item_Li">Apenas um Show</li>
+                <li class="Item_Li">Dragon Ball</li>
+                <li class="Item_Li">HeMan</li>
+                <li class="Item_Li">Scoobydoo</li>
             </ul>
-            <li class="opcoes-li"><a href="" class="opcoes-a"></a>Escalações</li>
-            <li class="opcoes-li"><a href="" class="opcoes-a"></a>Classificação</li>
+            <li class="opcoes-li"><a href="" class="opcoes-a"></a>Jogos</li>
+            <li class="opcoes-li"><a href="" class="opcoes-a"></a>Curiosidades</li>
         </ul>
         <div class="container">
 
@@ -63,15 +64,15 @@
             </span>
             <div class="div-imagem">
                 <img class="Imagem" src="img/pngwing.com.png" alt="">
-                <h1 class="titulo">Botafogo</h1>
+                <h1 class="titulo">Ben10</h1>
             </div>
             <div class="div-imagem">
                 <img class="Imagem" src="img/pngwing.com (1).png" alt="">
-                <h1 class="titulo">Corinthians</h1>
+                <h1 class="titulo">Winx</h1>
             </div>
             <div class="div-imagem">
                 <img class="Imagem" src="img/pngwing.com (2).png" alt="">
-                <h1 class="titulo">Manchester City</h1>
+                <h1 class="titulo">Wallace e Gromitt</h1>
             </div>
             <span>
             </span>
@@ -79,16 +80,16 @@
             </span>
             <div class="div-imagem">
                 <img class="Imagem" src="img/pngwing.com (3).png" alt="">
-                <h1 class="titulo">Real Madrid</h1>
+                <h1 class="titulo">Super Choque</h1>
             </div>
 
             <div class="div-imagem">
                 <img class="Imagem" src="img/pngwing.com (4).png" alt="">
-                <h1 class="titulo">Gremio</h1>
+                <h1 class="titulo">Jovens Titas</h1>
             </div>
             <div class="div-imagem">
                 <img class="Imagem" src="img/pngwing.com (5).png" alt="">
-                <h1 class="titulo">Inter de Milão</h1>
+                <h1 class="titulo">Apenas um Show</h1>
             </div>
             <span>
             </span>
@@ -96,15 +97,15 @@
             </span>
             <div class="div-imagem">
                 <img class="Imagem" src="img/pngwing.com (6).png" alt="">
-                <h1 class="titulo">Sampaio Correa</h1>
+                <h1 class="titulo">Dragon Ball</h1>
             </div>
             <div class="div-imagem">
                 <img class="Imagem" src="img/pngwing.com (7).png" alt="">
-                <h1 class="titulo">Avai</h1>
+                <h1 class="titulo">HeMan</h1>
             </div>
             <div class="div-imagem">
                 <img class="Imagem" src="img/pngwing.com (8).png" alt="">
-                <h1 class="titulo">Athletico Paranaense</h1>
+                <h1 class="titulo">Scoobydoo</h1>
             </div>
         </div>
 
