--- a/index.html
+++ b/index.html
@@ -63,15 +63,15 @@
             <span>
             </span>
             <div class="div-imagem">
-                <img class="Imagem" src="img/pngwing.com.png" alt="">
+                <img class="Imagem" src="img/ben10.webp" alt="">
                 <h1 class="titulo">Ben10</h1>
             </div>
             <div class="div-imagem">
-                <img class="Imagem" src="img/pngwing.com (1).png" alt="">
+                <img class="Imagem" src="img/winx.jpg" alt="">
                 <h1 class="titulo">Winx</h1>
             </div>
             <div class="div-imagem">
-                <img class="Imagem" src="img/pngwing.com (2).png" alt="">
+                <img class="Imagem" src="img/wallaceegromitt.webp" alt="">
                 <h1 class="titulo">Wallace e Gromitt</h1>
             </div>
             <span>
@@ -79,16 +79,16 @@
             <span>
             </span>
             <div class="div-imagem">
-                <img class="Imagem" src="img/pngwing.com (3).png" alt="">
+                <img class="Imagem" src="img/super-choque.jpg" alt="">
                 <h1 class="titulo">Super Choque</h1>
             </div>
 
             <div class="div-imagem">
-                <img class="Imagem" src="img/pngwing.com (4).png" alt="">
+                <img class="Imagem" src="img/TeenTitans.webp" alt="">
                 <h1 class="titulo">Jovens Titas</h1>
             </div>
             <div class="div-imagem">
-                <img class="Imagem" src="img/pngwing.com (5).png" alt="">
+                <img class="Imagem" src="img/apenasumshow.jpeg" alt="">
                 <h1 class="titulo">Apenas um Show</h1>
             </div>
             <span>
@@ -96,15 +96,15 @@
             <span>
             </span>
             <div class="div-imagem">
-                <img class="Imagem" src="img/pngwing.com (6).png" alt="">
+                <img class="Imagem" src="img/dragonball.png" alt="">
                 <h1 class="titulo">Dragon Ball</h1>
             </div>
             <div class="div-imagem">
-                <img class="Imagem" src="img/pngwing.com (7).png" alt="">
+                <img class="Imagem" src="img/heman.jpeg" alt="">
                 <h1 class="titulo">HeMan</h1>
             </div>
             <div class="div-imagem">
-                <img class="Imagem" src="img/pngwing.com (8).png" alt="">
+                <img class="Imagem" src="img/scoobydoo.jpg" alt="">
                 <h1 class="titulo">Scoobydoo</h1>
             </div>
         </div>
