--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <h1 class="titulo">HeMan</h1>
             </div>
             <div class="div-imagem">
-                <img class="Imagem" src="img/scoobydoo.jpg" alt="">
+                <img class="Imagem" src="img/scoobydoo.jpg." alt="">
                 <h1 class="titulo">Scoobydoo</h1>
             </div>
         </div>
